# codac

./: .gitmodules  CMakeLists.txt
.github/workflows/: dockercentos.yml  dockermatrix.yml  macosmatrix.yml  tests.yml  unixmatrix.yml  vcmatrix.yml
doc/: CMakeLists.txt
doc/api/: Doxyfile.in
doc/doc/: conf.py.in  index.rst
doc/doc/install/: 01-installation-full-linux.rst  01-installation-full-macos.rst  01-installation-full-windows.rst  01-installation-python.rst
doc/doc/manual/01-introduction/: index.rst
doc/doc/manual/02-variables/: 01-var-static.rst  02-var-dynamic.rst
doc/doc/manual/03-domains/: 01-dom-intervals.rst
doc/doc/manual/04-static-contractors/: 01-ctc-function.rst
doc/doc/tutorial-jnrr23/01-basics/: index.rst
doc/doc/tutorial/01-basics/: index.rst
doc/doc/tutorial/03-static-rangebearing/: index.rst
doc/doc/tutorial/05-tubes/: index.rst
doc/manual/: conf.py.in  index.rst
doc/manual/_static/css/: custom.css
examples/00_graphics/: CMakeCache.txt  Makefile  cmake_install.cmake  graphic_examples.py
examples/02_centered_form/: CMakeLists.txt  main.cpp  main.py  main_evans.cpp  main_parabolas.cpp  main_parabolas.py
examples/03_sivia/: CMakeLists.txt
examples/ellipsoid_dev/: CMakeLists.txt  main.cpp
examples/ellipsoid_example/: main.cpp
examples/tuto/01_getting_started/: a01_getting_started.m
examples/tuto/03_static_rangebearing/: a03_static_rangebearing.m
examples/tuto/05_dyn_rangebearing/: a05_dyn_rangebearing.m
python/codac/core/: __init__.py
python/src/: codac2_py_matlab.h
python/src/core/: CMakeLists.txt  codac2_py_core.cpp
python/src/graphics/: CMakeLists.txt  codac2_py_graphics.cpp
python/src/robotics/: codac_py_DataLoader.cpp
scripts/CMakeModules/: version_from_git.cmake
scripts/dependencies/: install_ibex.sh
scripts/docker/: build_pybinding.sh  build_pybinding_codac4matlab.sh
scripts/pybind/: doxygen2docstring.py
scripts/wheels/: gencodacwhl.sh
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/3rd/: codac2_ibex.cpp
src/core/actions/: codac2_OctaSym.cpp  codac2_OctaSym.h
src/core/contractors/: codac2_Ctc.h  codac2_CtcAction.h  codac2_CtcCartProd.h  codac2_CtcCtcBoundary.cpp  codac2_CtcEllipse.cpp  codac2_CtcEllipse.h  codac2_CtcEmpty.cpp  codac2_CtcEmpty.h  codac2_CtcIdentity.cpp  codac2_CtcIdentity.h  codac2_CtcInter.h  codac2_CtcInverse.h  codac2_CtcInverseNotIn.h  codac2_CtcNot.h  codac2_CtcProj.h  codac2_CtcSegment.cpp  codac2_CtcUnion.h  codac2_directed_ctc.cpp  codac2_directed_ctc.h  codac2_linear_ctc.cpp  codac2_linear_ctc.h
src/core/domains/: codac2_Domain.h  codac2_Wrapper.h
src/core/functions/: codac2_ExprBase.cpp  codac2_ExprBase.h  codac2_FunctionArgsList.h  codac2_FunctionBase.h  codac2_VarBase.h
src/core/geometry/: codac2_Polygon.cpp
src/core/matrices/: codac2_GaussJordan.cpp  codac2_GaussJordan.h  codac2_Inversion.cpp  codac2_Inversion.h  codac2_Matrix.h  codac2_MatrixBase.h  codac2_MatrixBaseBlock.h  codac2_MatrixBase_fwd.h  codac2_Row.h  codac2_Vector.cpp  codac2_Vector.h  codac2_VectorBase.h  codac2_arithmetic_add.h  codac2_arithmetic_div.h  codac2_arithmetic_mul.h  codac2_arithmetic_sub.h  codac2_inversion.cpp  codac2_matrices.h
src/core/paver/: codac2_pave.cpp  codac2_pave.h
src/core/proj/: codac2_ProjBase.cpp  codac2_ProjBase.h
src/core/separators/: codac2_Sep.h  codac2_SepAction.h  codac2_SepCartProd.cpp  codac2_SepCartProd.h  codac2_SepCtcBoundary.cpp  codac2_SepEllipse.cpp  codac2_SepInverse.h  codac2_SepPolygon.cpp  codac2_SepPolygon.h  codac2_SepProj.h  codac_SepProj.h
src/core/tools/: codac2_Approx.h  codac2_Index.h  codac2_assert.h  codac2_math.h  codac2_template_tools.h
src/core/trajectory/: codac2_AnalyticTrajectory.h  codac2_SampledTrajectory.h  codac2_TrajectoryBase.h
src/graphics/: CMakeLists.txt
src/graphics/figures/: codac2_Figure2D.cpp  codac2_Figure2D.h  codac2_Figure2DInterface.h  codac2_Figure2D_ellipsoid.cpp  codac2_OutputFigure2D.cpp  codac2_OutputFigure2D.h
src/graphics/paver/: codac2_drawwhilepaving.cpp
src/graphics/styles/: codac2_Color.cpp  codac2_Color.h  codac2_ColorMap.cpp  codac2_ColorMap.h  codac2_StyleProperties.cpp  codac2_StyleProperties.h
tests/: CMakeLists.txt
tests/core/3rd/: codac2_tests_ibex.cpp
tests/core/contractors/: codac2_tests_CtcAction.cpp  codac2_tests_CtcCtcBoundary.cpp  codac2_tests_CtcInverse.cpp  codac2_tests_CtcInverseNotIn.cpp  codac2_tests_CtcPolygon.cpp  codac2_tests_CtcSegment.cpp
tests/core/matrices/: codac2_tests_Inversion.cpp  codac2_tests_Inversion.py  codac2_tests_Matrix.cpp  codac2_tests_Vector.cpp  codac2_tests_arithmetic_add.cpp  codac2_tests_arithmetic_div.cpp  codac2_tests_arithmetic_mul.cpp  codac2_tests_arithmetic_sub.cpp  codac2_tests_inversion.cpp
tests/core/separators/: codac2_tests_SepCtcBoundary.cpp  codac2_tests_SepPolygon.cpp
tests/core/tools/: codac2_tests_Approx.cpp
tests/core/trajectory/: codac2_tests_AnalyticTrajectory.cpp  (+3 more)
tests/test_codac/: CMakeLists.txt
(+136 files in other folders)
